fix: swager create user
